# uzbek_payments

./: README.md  README_RU.md  pyproject.toml  ИНСТРУКЦИЯ.md  ИСПРАВЛЕНИЯ_ОШИБОК.md  ПОЛНЫЙ_АНАЛИЗ_МОДУЛЯ.md
uzbek_payments/: api_validators.py  cache_utils.py  db_utils.py  hooks.py  idempotency.py  integrations.py  lock_utils.py  metrics.py  rate_limiter.py  validators.py  webhook_retry.py
uzbek_payments/payment_gateways/: __init__.py
uzbek_payments/payment_gateways/doctype/: __init__.py
uzbek_payments/payment_gateways/doctype/click_settings/: __init__.py  click_settings.json  click_settings.py
uzbek_payments/payment_gateways/doctype/freedompay_settings/: __init__.py  freedompay_settings.json  freedompay_settings.py
uzbek_payments/payment_gateways/doctype/payme_settings/: __init__.py  payme_settings.json  payme_settings.py
uzbek_payments/tests/: __init__.py  test_db_utils.py  test_integrations.py
uzbek_payments/translations/: en.csv  ru.csv  uz.csv
uzbek_payments/utils/: __init__.py  utils.py
