[project]
name = "uzbek_payments"
version = "1.0.0"
description = "Payment gateway integrations for Uzbek payment systems"
requires-python = ">=3.10"
dependencies = [
    #"frappe>=15.0.0",
    #"gunicorn @ git+https://github.com/frappe/gunicorn@bb554053bb87218120d76ab6676af7015680e8b6"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
